[package]
name = "pbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30", features = ["serde-serialize"] }
float-cmp = "0.9.0"
gltf = "0.16"
rayon = "1.5"
image = "0.23"
itertools = "0.10"
rand = "0.8"
enum_dispatch = "0.3.7"