[package]
name = "pbr_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30", features = ["serde-serialize"] }
float-cmp = "0.9.0"
rayon = "1.5.3"
gltf = "0.16"
image = "0.23"
itertools = "0.10"
rand = "0.8"
enum_dispatch = "0.3.7"
impl_ops = "0.1.1"
num-traits = "0.2.14"

